Correct align for Auth & PopUp

--- a/public/sass/components/_buttons.sass
+++ b/public/sass/components/_buttons.sass
@@ -60,8 +60,8 @@
     &--close
         display: block
         position: absolute
-        top: 1.5rem 
-        right: 1rem
+        top: 1.2rem 
+        right: 0.5rem
         border: none
         width: 1.5rem
         height: 1.5rem
@@ -122,6 +122,8 @@
                     fill: $palette__background
         &--close
             transition: $fast
+            top: 1.5rem 
+            right: 1rem
             &:hover
                 cursor: pointer
                 &::after
