--- a/public/sass/components/_userPopUp.sass
+++ b/public/sass/components/_userPopUp.sass
@@ -1,15 +1,16 @@
 .ourteam
     &__user-popup
-        position: absolute
         z-index: 2
-        grid-template-columns: 17.5rem
-        padding: 2rem 1rem
-        top: 1%
-        left: 1%
+        grid-template-columns: 15rem
+        padding: 2rem
         grid-template-areas: 'img' 'user-info'
         background-color: $palette__background
         border-radius: $border-radius
         display: none
+        position: absolute
+        left: calc(50vw - 151px)
+        top: calc(50vh - 272px)
+        bottom: calc(50vh - 272px)
         &.is-active
             display: grid
     .user-popup
@@ -27,7 +28,7 @@
         &__img
             grid-area: img
             width: 100%
-            height: 280px
+            height: 15rem
             object-fit: cover
             border-radius: $border-radius
         &__details
@@ -69,5 +70,9 @@
             grid-template-areas: 'img user-info'
             padding: 2rem
             column-gap: 2rem
-            top: 27%
-            left: 33%
+            left: calc(50vw - 331px)
+            top: calc(50vh - 172px)
+            bottom: calc(50vh - 172px)
+        .user-popup
+            &__img
+                height: 17.5rem
