--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -14,3 +14,7 @@
     font-family: 'MyriadProReg'
 .container
     max-width: 1280px
+
+body
+    &.is-disabled
+        overflow: hidden
