--- a/public/sass/pages/_auth.sass
+++ b/public/sass/pages/_auth.sass
@@ -3,14 +3,11 @@
     background-size: cover
     width: 100%
     min-height: 100vh
-
-.alignbox
-    width: 100%
-    min-height: 100vh
-    +flex-center
+    position: relative
 
 .auth
-    &--align-content
+    &--align
+        position: absolute
         display: grid
         row-gap: 1rem
         grid-template-columns: 16rem
@@ -19,6 +16,9 @@
         background-color: $palette__background
         border-radius: $border-radius
         box-shadow: $shadow
+        top: calc(50vh - 272px)
+        left: calc(50vw - 152px)
+        right: calc(50vw - 152px)
         padding: 1rem 1.5rem
     &__logo
         grid-area: logo
@@ -93,12 +93,15 @@
 
 @media all and (min-width: 768px)
     .auth
-        &--align-content
+        &--align
             grid-template-columns: repeat(2, 17.5rem)
             grid-template-areas: 'logo main' 'social main'
             row-gap: 0
             column-gap: 1rem
             padding: 2rem
+            top: calc(50vh - 194px)
+            left: calc( 50vw - 320px)
+            right: calc( 50vw - 320px)
         &__logo
             width: 100%
             height: 100%
